--- a/html/css/main.css
+++ b/html/css/main.css
@@ -4079,25 +4079,14 @@ table tbody tr {
   }
 }
 
-.graph__filter {
-  margin-bottom: 21px;
-}
-
-@media only screen and (min-width: 1000px) {
-  .graph__filter {
-    position: absolute;
-    left: 50%;
-    -webkit-transform: translateX(-50%) translateY(100%);
-        -ms-transform: translateX(-50%) translateY(100%);
-            transform: translateX(-50%) translateY(100%);
-    bottom: -74px;
-    z-index: 1;
-    margin-bottom: 0px;
-  }
+.graph__input {
+  margin-bottom: 26px;
+  display: block;
 }
 
 @media only screen and (min-width: 1000px) {
   .graph__input {
+    margin-bottom: 0px;
     -webkit-box-ordinal-group: 4;
         -ms-flex-order: 3;
             order: 3;
@@ -4121,131 +4110,14 @@ table tbody tr {
   }
 }
 
-.graph__tabs {
-  display: none;
-}
-
-@media only screen and (min-width: 1000px) {
-  .graph__tabs {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  @supports ((-moz-column-gap: 39px) or (column-gap: 39px)) {
-    .graph__tabs {
-      -webkit-column-gap: 39px;
-         -moz-column-gap: 39px;
-              column-gap: 39px;
-    }
-  }
-  @supports not ((-moz-column-gap: 39px) or (column-gap: 39px)) {
-    .graph__tabs {
-      margin-right: calc( 0px - (39px / 2));
-      margin-left: calc( 0px - (39px / 2));
-    }
-    .graph__tabs > * {
-      margin-right: calc(39px / 2);
-      margin-left: calc(39px / 2);
-    }
-  }
-}
-
-.graph__btn {
-  font-size: 20px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 17px;
-  padding-right: 17px;
-  -webkit-transition-property: background color;
-  -o-transition-property: background color;
-  transition-property: background color;
-  -webkit-transition-duration: 300ms;
-       -o-transition-duration: 300ms;
-          transition-duration: 300ms;
-  -webkit-transition-timing-function: ease;
-       -o-transition-timing-function: ease;
-          transition-timing-function: ease;
-  border-radius: 51px;
-}
-
-.graph__select {
-  position: relative;
-  z-index: 10;
-}
-
-@media only screen and (min-width: 1000px) {
-  .graph__select {
-    display: none;
-  }
-}
-
-.graph__active-item {
-  -webkit-transition-property: all;
-  -o-transition-property: all;
-  transition-property: all;
-  -webkit-transition-duration: 300ms;
-       -o-transition-duration: 300ms;
-          transition-duration: 300ms;
-  -webkit-transition-timing-function: ease;
-       -o-transition-timing-function: ease;
-          transition-timing-function: ease;
-  padding: 5px 9px;
-}
-
-.graph__active-item .icon {
-  -webkit-transition: inherit;
-  -o-transition: inherit;
-  transition: inherit;
-}
-
-.graph__active-item.is-active .icon {
-  -webkit-transform: rotate(-180deg);
-      -ms-transform: rotate(-180deg);
-          transform: rotate(-180deg);
-}
-
-.graph__dropdown {
-  padding: 7px 0px;
-  border-top: 11px solid #071D72;
-  border-bottom: 1px solid #071D72;
-  z-index: -1;
-  bottom: 10px;
-  -webkit-box-shadow: -3px 6px 19px rgba(0, 0, 0, 0.12);
-          box-shadow: -3px 6px 19px rgba(0, 0, 0, 0.12);
-  position: absolute;
-  -webkit-transform: translateY(100%) scaleY(0);
-      -ms-transform: translateY(100%) scaleY(0);
-          transform: translateY(100%) scaleY(0);
-  -webkit-transform-origin: top;
-      -ms-transform-origin: top;
-          transform-origin: top;
-  width: 100%;
-  background-color: #fff;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  -webkit-transition: 0.3s linear opacity, 0.3s linear visibility, 0.3s -webkit-transform cubic-bezier(1, 0, 0, 1);
-  transition: 0.3s linear opacity, 0.3s linear visibility, 0.3s -webkit-transform cubic-bezier(1, 0, 0, 1);
-  -o-transition: 0.3s transform cubic-bezier(1, 0, 0, 1), 0.3s linear opacity, 0.3s linear visibility;
-  transition: 0.3s transform cubic-bezier(1, 0, 0, 1), 0.3s linear opacity, 0.3s linear visibility;
-  transition: 0.3s transform cubic-bezier(1, 0, 0, 1), 0.3s linear opacity, 0.3s linear visibility, 0.3s -webkit-transform cubic-bezier(1, 0, 0, 1);
-}
-
-.graph__dropdown.is-open {
-  -webkit-transform: translateY(100%) scaleY(1);
-      -ms-transform: translateY(100%) scaleY(1);
-          transform: translateY(100%) scaleY(1);
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-
-.graph__select-item {
-  padding: 5px 9px;
-}
-
 .graph__item {
-  margin-top: 134px;
+  margin-top: 24px;
+}
+
+@media only screen and (min-width: 1200px) {
+  .graph__item {
+    margin-top: 69px;
+  }
 }
 
 .highcharts-button .highcharts-button-box,
